[metadata]
name = pobm
description = Oximetry Toolbox, for extracting biomarkers from spo2 signal
author = "Jeremy Levy"
author-email = "jeremy.levy@campus.technion.ac.il"
license = proprietary
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = http://aim-lab.github.io
project-urls = 
	Documentation = http://aim-lab.github.io
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = 
	=pobm
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires = 
	numpy
	scipy
	lempel-ziv-complexity

[options.packages.find]
where = pobm
exclude = 
	tests

[options.extras_require]
testing = 
	pytest
	pytest-cov

[options.entry_points]
console_scripts = 
	pobm = pobm.main:run

[test]
extras = True

[tool:pytest]
addopts = 
	--cov pobm --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 3.2.3
package = pobm

[egg_info]
tag_build = 
tag_date = 0

